src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CSPOFA__Process_Step_link__c</fullName>
        <label>Process Step link</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LG_PartnerAccount__c</fullName>
        <description>Field contains the name of the Partner Account that this Activity is assigned to. This field can be used to report on Activities grouped by Partner.</description>
        <formula>Owner:User.Contact.Account.Name</formula>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Preferred_Communication_Channel__c</fullName>
        <description>Field to capture preferred communication channel for the customer</description>
        <label>Preferred Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_RelatedExternalID__c</fullName>
        <description>Stores External ID of the related Lead/Account.</description>
        <label>Related External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Result_L2__c</fullName>
        <label>Result - L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Result_L3__c</fullName>
        <label>Result - L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <color>#33FF33</color>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Quote</fullName>
                    <color>#009900</color>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                    <color>#00CCCC</color>
                    <label>Follow up</label>
                </value>
                <value>
                    <fullName>Future interest</fullName>
                    <color>#FFCC66</color>
                    <label>Future interest</label>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                    <color>#663300</color>
                    <label>Not interested</label>
                </value>
                <value>
                    <fullName>Not reached</fullName>
                    <color>#999999</color>
                    <label>Not reached</label>
                </value>
                <value>
                    <fullName>Invalid Data</fullName>
                    <color>#333333</color>
                    <label>Invalid Data</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SalesChannel__c</fullName>
        <description>Field contains the Sales Channel of the Assigned to User this Activity is assigned to. This field can be used to report on Activities/Results grouped by Sales Channel and type of Result.</description>
        <formula>text (Owner:User.LG_SalesChannel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>LG_Result__c</columns>
        <columns>LG_Result_L2__c</columns>
        <columns>LG_Result_L3__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>LG_Result__c</columns>
        <columns>LG_Result_L2__c</columns>
        <columns>LG_Result_L3__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>LG_Result__c</columns>
        <columns>LG_Result_L2__c</columns>
        <columns>LG_Result_L3__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>LG_Result__c</columns>
        <columns>LG_Result_L2__c</columns>
        <columns>LG_Result_L3__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>LG_Result__c</columns>
        <columns>LG_Result_L2__c</columns>
        <columns>LG_Result_L3__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>